--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@alarido/ts-utils",
   "version": "1.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "\"# ts-utils\"",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
