--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alarido/ts-utils",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "publishConfig": {
     "access": "public"
   },
@@ -8,7 +8,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx jest",
     "build": "tsc",
     "prepublish": "npm run build"
   },
@@ -24,7 +24,10 @@
   },
   "homepage": "https://github.com/collei/ts-utils#readme",
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.9.3"
   }
 }
