--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     // File Layout
     "rootDir": "./src",
     "outDir": "./dist",
-
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
     "module": "nodenext",
@@ -12,7 +11,7 @@
     //"types": [],
     // For nodejs:
     "lib": ["esnext"],
-    "types": ["node"],
+    "types": ["node","jest"],
     // and npm install -D @types/node
 
     // Other Outputs
